--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ночлежка</title>
-    <link rel="stylesheet" href="styles/index.css" />
-  </head>
-  <body class="body">
-    <div class="page">
-      <header class="header"></header>
 
-      <main class="content"></main>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Гедонизмфест</title>
+  <link rel="stylesheet" href="./pages/index.css">
+</head>
 
-      <footer class="footer"></footer>
-    </div>
-    <script src="./scripts/script.js"></script>
-  </body>
+<body class="container">
+  <div class="page">
+    <header class="header">
+      <div class="header__logo-location">
+        <div class="header__logo"></div>
+        <div class="header__location">
+
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">куда пойти</a>
+          </li>
+          <li>
+            <a href="#">стать участником</a>
+          </li>
+          <li>
+            <a href="#">о фестивале</a>
+          </li>
+        </ul>
+      </nav>
+
+    </header>
+    <main class="content">
+
+    </main>
+    <footer class="footer">
+
+    </footer>
+  </div>
+  <script src="./pages/index.js"></script>
+</body>
+
 </html>
