--- a/index.html
+++ b/index.html
@@ -48,7 +48,54 @@
 
     </main>
     <footer class="footer">
-
+      <div class="footer__container">
+        <img class="footer__image" src="./images/footer_illustration.svg" alt="Ночлежка">
+        <div class="footer__organizer">
+          <h3 class="footer__title">организатор:</h3>
+          <ul class="footer__links">
+            <li>
+              <a class="footer__link" href="#">Ночлежка</a>
+            </li>
+            <li>
+              <a class="footer__email" href="#">info@hedonismfest.ru</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__partners">
+          <h3 class="footer__title">сделано с любовью:</h3>
+          <ul class="footer__links">
+            <li>
+              <a class="footer__link" href="#">Fastsol Digital</a>
+            </li>
+            <li>
+              <a class="footer__link" href="#">shishki.collective</a>
+            </li>
+            <li>
+              <a class="footer__link" href="#">студентами Яндекс.Практикума</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__social">
+          <h3 class="footer__title">мы в соцсетях:</h3>
+          <ul class="footer__icons">
+            <li class="footer__icon" >
+              <a href="" >
+                <img src="./images/footer_facebook-icon.svg" alt="facebook">
+              </a>
+            </li>
+            <li class="footer__icon" >
+              <a href="">
+                <img src="./images/footer_instagram-icon.svg" alt="instagram">
+              </a>
+            </li>
+            <li class="footer__icon">
+              <a  href="">
+                <img src="./images/footer_vk-icon.svg" alt="vkontakte">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </div>
   <script src="./pages/index.js"></script>
