--- a/pages/category.html
+++ b/pages/category.html
@@ -29,12 +29,12 @@
         </nav>
       </header>
       <main class="content">
-        <h1 class="category__title">стать участником</h1>
+        <h1 class="form__title">стать участником</h1>
         <div class="category__form-holder">
-          <p class="category__step">шаг 1 из 4</p>
-          <p class="category__heading">выберите категорию</p>
-          <form action="" name="category__form" class="category__form">
-            <fieldset class="category__input-container">
+          <p class="form__step">шаг 1 из 4</p>
+          <p class="form__heading">выберите категорию</p>
+          <form class="form__form" action="" name="category__form">
+            <fieldset class="form__input-container">
               <label class="form-input">
                 <input class="category__input-value" type="radio" name="category" value="cafe" />
                 <span>кафе/бар/ресторан</span>
@@ -53,7 +53,7 @@
                 <span>другое</span>
               </label>
             </fieldset>
-            <div class="category__controls">
+            <div class="form__controls">
               <button type="button" class="form-input form-input__control">отмена</button>
               <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
             </div>
