--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -48,7 +48,7 @@
           <p class="form__heading">Заполните форму</p>
           <form class="form__form" action="" name="category__form"> 
             <fieldset class="form__input-container form__container_line_bottom">
-              <label class="form-input form-input_active">  <!--Нужно что то придумать с form-input и form__input, т.к. form__input просто форму поля даёт и рамочку, думаю переименовать стоит form-input-->
+              <label class="form-input form-input_active">  <!--Нужно что то придумать с form-input и form__input, т.к. form__field просто форму поля даёт и рамочку, думаю переименовать стоит form-input-->
                 <input class="category__input-value" type="radio" name="category" value="cafe" />
                 <span>кафе/бар/ресторан</span>
               </label>
@@ -56,19 +56,19 @@
             
             <fieldset class="form__input-container">
               <label class="form__label">город</label>
-              <select class="form__input form-input__city-list">
+              <select class="form__field form-input__city-list">
                 <option value="" style="display:none">Выберите из списка</option>
                 <option>Москва</option>
                 <option>Санкт-Петербург</option>
               </select>
               <label class="form__label" for="cafeName">название заведения</label>
-              <input class="form__input formCafe__input_type_text" id="cafeName" type="text" name="category" placeholder="введите название заведения" value="" />
+              <input class="form__field formCafe__input_type_text" id="cafeName" type="text" name="category" placeholder="введите название заведения" value="" />
               <label class="form__label" for="contact-name">контактное лицо</label>
-              <input class="form__input formCafe__input_type_text" id="contact-name" type="text" name="category" placeholder="введите ФИО" value="" />
+              <input class="form__field formCafe__input_type_text" id="contact-name" type="text" name="category" placeholder="введите ФИО" value="" />
               <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-              <input class="form__input formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />    
+              <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />    
               <label class="form__label" for="cafe-description">описание</label>
-              <textarea class="form__input formCafe__description" name="" id="cafe-description" placeholder="Укажите что из меню будет принимать участие в акции" cols="30" rows="6"></textarea>
+              <textarea class="form__field formCafe__description" name="" id="cafe-description" placeholder="Укажите что из меню будет принимать участие в акции" cols="30" rows="6"></textarea>
             </fieldset>
 
             <div class="form__controls">
