--- a/index.html
+++ b/index.html
@@ -45,6 +45,36 @@
 
     </header>
     <main class="content">
+      <section class="how-to-participate">
+        <h1 class="title">стать участником</h1>
+        <h2 class="subtitle">как учавствовать?</h2>
+        <div class="question-block">
+          <h3 class="question-block__number">1</h3>
+          <h4 class="question-block__title" >выбор категории</h4>
+          <p class="question-block__text">Определите, как вы хотите поддержать акцию: продавать напитки, блюда, провести мастер-класс или каким-то другим способом</p>
+        </div>
+        <div class="question-block">
+          <h3 class="question-block__number" >2</h3>
+          <h4 class="question-block__title">фото и описание</h4>
+          <p class="question-block__text" >Подготовьте описание и фото вашего заведения. Это нужно для создания карточки в нашем каталоге событий </p>
+        </div>
+        <div class="question-block">
+          <h3 class="question-block__number" >3</h3>
+          <h4 class="question-block__title" >ссылки и соцсети</h4>
+          <p class="question-block__text">Опубликуйте ссылку на вашу карточку в соцсетях, расскажите у себя на сайте, чтобы больше людей узнали о вашем участии</p>
+        </div>
+        <div class="question-block">
+          <h3 class="question-block__number">4</h3>
+          <h4 class="question-block__title">координатор</h4>
+          <p class="question-block__text">Далее с вами свяжется координатор акции, который будет помогать по любым вопросам до и во время акции</p>
+        </div>
+        <div class="question-block">
+          <h3 class="question-block__number">5</h3>
+          <h4 class="question-block__title">перевод средств</h4>
+          <p class="question-block__text">После акции переведите собранные пожертвования в Ночлежку через сайт или по безналичному расчету</p>
+        </div>
+        <button type="button" class="form-button">заполнить форму</button>
+      </section>
 
     </main>
     <footer class="footer">
