howParticipate in pages

--- a/pages/howParticipate.html
+++ b/pages/howParticipate.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Гедонизмфест</title>
-  <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="../styles/index.css">
 </head>
 
 <body class="container">
@@ -16,7 +16,7 @@
         <div class="header__bar-left">
           <div class="header__logo"></div>
           <button type="button" class="button button_type_link button_place_header">
-            <img src="./images/icon_location.svg" alt="location icon" class="button__icon">
+            <img src="../images/icon_location.svg" alt="location icon" class="button__icon">
             Санкт-Петербург
           </button>
         </div>
@@ -35,7 +35,7 @@
         </nav>
         <div class="header__user-actions">
           <button type="button" class="button button_type_link">
-            <img src="./images/icon_heart.svg" alt="heart icon" class="button__icon">
+            <img src="../images/icon_heart.svg" alt="heart icon" class="button__icon">
             хочу пойти</button>
           <button type="button" class="button button_type_filled button_place_header">поддержать</button>
           <button type="button" class="button button_type_burger"></button>
@@ -49,7 +49,7 @@
     </main>
     <footer class="footer">
       <div class="footer__container">
-        <img class="footer__image" src="./images/footer_illustration.svg" alt="Ночлежка">
+        <img class="footer__image" src="../images/footer_illustration.svg" alt="Ночлежка">
         <div class="footer__organizer">
           <h3 class="footer__title">организатор:</h3>
           <ul class="footer__links">
@@ -80,17 +80,17 @@
           <ul class="footer__icons">
             <li class="footer__icon" >
               <a href="" >
-                <img src="./images/footer_facebook-icon.svg" alt="facebook">
+                <img src="../images/footer_facebook-icon.svg" alt="facebook">
               </a>
             </li>
             <li class="footer__icon" >
               <a href="">
-                <img src="./images/footer_instagram-icon.svg" alt="instagram">
+                <img src="../images/footer_instagram-icon.svg" alt="instagram">
               </a>
             </li>
             <li class="footer__icon">
               <a  href="">
-                <img src="./images/footer_vk-icon.svg" alt="vkontakte">
+                <img src="../images/footer_vk-icon.svg" alt="vkontakte">
               </a>
             </li>
           </ul>
@@ -98,7 +98,7 @@
       </div>
     </footer>
   </div>
-  <script src="./pages/index.js"></script>
+  <script src="../pages/index.js"></script>
 </body>
 
 </html>
