--- a/pages/category.html
+++ b/pages/category.html
@@ -10,23 +10,37 @@
   <body class="container">
     <div class="page">
       <header class="header">
-        <div class="header__logo-location">
-          <div class="header__logo"></div>
-          <div class="header__location"></div>
-        </div>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">куда пойти</a>
-            </li>
-            <li>
-              <a href="#">стать участником</a>
-            </li>
-            <li>
-              <a href="#">о фестивале</a>
-            </li>
-          </ul>
-        </nav>
+        <!-- <div class="header__container"> -->
+          <div class="header__bar-left">
+            <div class="header__logo"></div>
+            <button type="button" class="button button_type_link button_place_header">
+              <img src="../images/icon_location.svg" alt="location icon" class="button__icon">
+              Санкт-Петербург
+            </button>
+          </div>
+          <nav class="header__nav-bar">
+            <ul class="header__link-list">
+              <li class="header__list-item">
+                <button type="button" class="button button_type_link">куда пойти</button>
+              </li>
+              <li class="header__list-item">
+                <button type="button" class="button button_type_link">стать участником</button>
+              </li>
+              <li class="header__list-item">
+                <button type="button" class="button button_type_link">о фестивале</button>
+              </li>
+            </ul>
+          </nav>
+          <div class="header__user-actions">
+            <button type="button" class="button button_type_link">
+              <img src="../images/icon_heart.svg" alt="heart icon" class="button__icon">
+              хочу пойти</button>
+            <button type="button" class="button button_type_filled button_place_header">поддержать</button>
+            <button type="button" class="button button_type_burger"></button>
+          </div>
+        <!-- </div> -->
+  
+  
       </header>
       <main class="content">
         <h1 class="form__title">стать участником</h1>
