--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -10,7 +10,6 @@
   <body class="container">
     <div class="page">
       <header class="header">
-        <!-- <div class="header__container"> -->
         <div class="header__bar-left">
           <div class="header__logo"></div>
           <button type="button" class="button button_type_link button_place_header">
@@ -39,22 +38,40 @@
           <button type="button" class="button button_type_filled button_place_header">поддержать</button>
           <button type="button" class="button button_type_burger"></button>
         </div>
-        <!-- </div> -->
       </header>
 
       <main class="content">
         <h1 class="form__title">стать участником</h1>
-        <div class="form__container_place_cafe">
+        <div class="form__container_place_master-class">
           <p class="form__step">шаг 2 из 4</p>
           <div class="form__instruction">
             <p class="form__heading">заполните форму</p>
+            <div class="form__paragraphs">
+              <p class="form__paragraph">Определитесь с типом мероприятия — лекция, консультация или мастер-класс.</p>
+              <p class="form__paragraph">Когда люди будут покупать билеты, вам будут приходить уведомления на электронную почту</p>
+            </div>
           </div>
           <form class="form__form" action="" name="category__form">
-            <fieldset class="form__input-container form__container_line_bottom">
+            <fieldset class="form__input-container">
               <label class="form-input form-input_active">
                 <!--Нужно что то придумать с form-input и form__input, т.к. form__field просто форму поля даёт и рамочку, думаю переименовать стоит form-input-->
-                <input class="form-input__radio" type="radio" name="category" value="cafe" />
-                <span>кафе/бар/ресторан</span>
+                <input class="form-input__radio" type="radio" name="category" value="master-class" />
+                <span>мастер-класс/лекция</span>
+                <img src="../images/form/checked.svg" class="form-input__checked" />
+              </label>
+            </fieldset>
+
+            <fieldset class="form__radio-block">
+              <label class="form__radio-unit">
+                <img src="../images/form/radio_active.svg" alt="онлайн формат" />
+                <input class="form-input__radio" type="radio" name="lection-form" value="online" />
+                <span>онлайн</span>
+              </label>
+
+              <label class="form__radio-unit">
+                <img src="../images/form/radio_inactive.svg" alt="оффлайн формат" />
+                <input class="form-input__radio" type="radio" name="lection-form" value="offline" />
+                <span>оффлайн</span>
               </label>
             </fieldset>
 
@@ -69,13 +86,25 @@
               </div>
 
               <div class="form__unit">
-                <label class="form__label" for="cafeName">название заведения</label>
+                <label class="form__label" for="event-name">название мероприятия</label>
                 <input
                   class="form__field formCafe__input_type_text"
-                  id="cafeName"
+                  id="event-name"
                   type="text"
-                  name="category"
-                  placeholder="введите название заведения"
+                  name="event-name"
+                  placeholder="введите название мероприятия"
+                  value=""
+                />
+              </div>
+
+              <div class="form__unit">
+                <label class="form__label" for="event-date">дата проведения</label>
+                <input
+                  class="form__field formCafe__input_type_text"
+                  id="event-date"
+                  type="text"
+                  name="event-date"
+                  placeholder="укажите дату в формате дд.мм.гггг"
                   value=""
                 />
               </div>
@@ -93,20 +122,8 @@
               </div>
 
               <div class="form__unit">
-                <label class="form__label" for="contact-number">телефон для связи с организатором</label>
+                <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
                 <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
-              </div>
-
-              <div class="form__unit">
-                <label class="form__label" for="cafe-description">описание</label>
-                <textarea
-                  class="form__field form-input form__textarea"
-                  name=""
-                  id="cafe-description"
-                  placeholder="Укажите что из меню будет принимать участие в акции"
-                  cols="30"
-                  rows="6"
-                ></textarea>
               </div>
             </fieldset>
 
