--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -10,7 +10,6 @@
   <body class="container">
     <div class="page">
       <header class="header">
-        <!-- <div class="header__container"> -->
         <div class="header__bar-left">
           <div class="header__logo"></div>
           <button type="button" class="button button_type_link button_place_header">
@@ -39,37 +38,96 @@
           <button type="button" class="button button_type_filled button_place_header">поддержать</button>
           <button type="button" class="button button_type_burger"></button>
         </div>
-        <!-- </div> -->
       </header>
+
       <main class="content">
         <h1 class="form__title">стать участником</h1>
-        <div class="category__form-holder">
-          <p class="form__step">шаг 1 из 4</p>
+        <div class="form__container_place_master-class">
+          <p class="form__step">шаг 2 из 4</p>
           <div class="form__instruction">
-            <p class="form__heading">выберите категорию</p>
+            <p class="form__heading">заполните форму</p>
+            <div class="form__paragraphs">
+              <p class="form__paragraph">Определитесь с типом мероприятия — лекция, консультация или мастер-класс.</p>
+              <p class="form__paragraph">Когда люди будут покупать билеты, вам будут приходить уведомления на электронную почту</p>
+            </div>
           </div>
           <form class="form__form" action="" name="category__form">
             <fieldset class="form__input-container">
-              <label class="form-input">
-                <input class="form-input__radio" type="radio" name="category" value="cafe" />
-                <span>кафе/бар/ресторан</span>
-              </label>
               <label class="form-input form-input_active">
-                <input class="form-input__radio category__input-value_checked" type="radio" name="category" value="lection" />
+                <input class="form-input__radio" type="radio" name="category" value="master-class" />
                 <span>мастер-класс/лекция</span>
                 <img src="../images/form/checked.svg" class="form-input__checked" />
               </label>
-              <label class="form-input">
-                <input class="form-input__radio" type="radio" name="category" value="party" />
-                <span>посиделки/вечеринка</span>
+            </fieldset>
+
+            <fieldset class="form__radio-block">
+              <label class="form__radio-unit">
+                <img src="../images/form/radio_active.svg" alt="онлайн формат" />
+                <input class="form-input__radio" type="radio" name="lection-form" value="online" />
+                <span>онлайн</span>
               </label>
-              <label class="form-input">
-                <input class="form-input__radio" type="radio" name="category" value="other" />
-                <span>другое</span>
+
+              <label class="form__radio-unit">
+                <img src="../images/form/radio_inactive.svg" alt="оффлайн формат" />
+                <input class="form-input__radio" type="radio" name="lection-form" value="offline" />
+                <span>оффлайн</span>
               </label>
             </fieldset>
+
+            <fieldset class="form__labeled-container">
+              <div class="form__unit">
+                <label class="form__label">город</label>
+                <select class="form__field form__list">
+                  <option value="" style="display: none">выберите из списка</option>
+                  <option>Москва</option>
+                  <option>Санкт-Петербург</option>
+                </select>
+              </div>
+
+              <div class="form__unit">
+                <label class="form__label" for="event-name">название мероприятия</label>
+                <input
+                  class="form__field formCafe__input_type_text"
+                  id="event-name"
+                  type="text"
+                  name="event-name"
+                  placeholder="введите название мероприятия"
+                  value=""
+                />
+              </div>
+
+              <div class="form__unit">
+                <label class="form__label" for="event-date">дата проведения</label>
+                <input
+                  class="form__field formCafe__input_type_text"
+                  id="event-date"
+                  type="text"
+                  name="event-date"
+                  placeholder="укажите дату в формате дд.мм.гггг"
+                  value=""
+                />
+              </div>
+
+              <div class="form__unit">
+                <label class="form__label" for="contact-name">контактное лицо</label>
+                <input
+                  class="form__field formCafe__input_type_text"
+                  id="contact-name"
+                  type="text"
+                  name="category"
+                  placeholder="введите ФИО"
+                  value=""
+                />
+              </div>
+
+              <div class="form__unit">
+                <label class="form__label" for="contact-number">номер телефона для связи с организатором</label>
+                <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
+              </div>
+            </fieldset>
+
             <div class="form__controls">
-              <button type="button" class="form-input form-input__control">отмена</button>
+              <button type="button" class="form-input form-input__control">назад</button>
               <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
             </div>
           </form>
