--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -99,7 +99,7 @@
             </fieldset>
 
             <div class="form__controls">
-              <button type="button" class="form-input form-input__control">отмена</button>
+              <button type="button" class="form-input form-input__control">назад</button>
               <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
             </div>
           </form>
