--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Гедонизмфест</title>
+    <link rel="stylesheet" href="./styles/index.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Гедонизмфест</title>
-  <link rel="stylesheet" href="./styles/index.css">
-</head>
-
-<body class="container">
-  <div class="page">
-    <header class="header">
-      <!-- <div class="header__container"> -->
+  <body class="container">
+    <div class="page">
+      <header class="header">
+        <!-- <div class="header__container"> -->
         <div class="header__bar-left">
           <div class="header__logo"></div>
           <button type="button" class="button button_type_link button_place_header">
-            <img src="./images/icon_location.svg" alt="location icon" class="button__icon">
+            <img src="./images/icon_location.svg" alt="location icon" class="button__icon" />
             Санкт-Петербург
           </button>
         </div>
@@ -35,97 +34,101 @@
         </nav>
         <div class="header__user-actions">
           <button type="button" class="button button_type_link">
-            <img src="./images/icon_heart.svg" alt="heart icon" class="button__icon">
-            хочу пойти</button>
+            <img src="./images/icon_heart.svg" alt="heart icon" class="button__icon" />
+            хочу пойти
+          </button>
           <button type="button" class="button button_type_filled button_place_header">поддержать</button>
           <button type="button" class="button button_type_burger"></button>
         </div>
-      <!-- </div> -->
-    </header>
-    <main class="content">
-      <section class="how-to-participate">
-        <h1 class="title">стать участником</h1>
-        <h2 class="subtitle">как учавствовать?</h2>
-        <div class="question-block">
-          <h3 class="question-block__number">1</h3>
-          <h4 class="question-block__title" >выбор категории</h4>
-          <p class="question-block__text">Определите, как вы хотите поддержать акцию: продавать напитки, блюда, провести мастер-класс или каким-то другим способом</p>
+        <!-- </div> -->
+      </header>
+      <main class="content">
+        <section class="how-to-participate">
+          <h1 class="title">стать участником</h1>
+          <h2 class="subtitle">как учавствовать?</h2>
+          <div class="question-block">
+            <h3 class="question-block__number">1</h3>
+            <h4 class="question-block__title">выбор категории</h4>
+            <p class="question-block__text">
+              Определите, как вы хотите поддержать акцию: продавать напитки, блюда, провести мастер-класс или каким-то другим способом
+            </p>
+          </div>
+          <div class="question-block">
+            <h3 class="question-block__number">2</h3>
+            <h4 class="question-block__title">фото и описание</h4>
+            <p class="question-block__text">Подготовьте описание и фото вашего заведения. Это нужно для создания карточки в нашем каталоге событий</p>
+          </div>
+          <div class="question-block">
+            <h3 class="question-block__number">3</h3>
+            <h4 class="question-block__title">ссылки и соцсети</h4>
+            <p class="question-block__text">
+              Опубликуйте ссылку на вашу карточку в соцсетях, расскажите у себя на сайте, чтобы больше людей узнали о вашем участии
+            </p>
+          </div>
+          <div class="question-block">
+            <h3 class="question-block__number">4</h3>
+            <h4 class="question-block__title">координатор</h4>
+            <p class="question-block__text">Далее с вами свяжется координатор акции, который будет помогать по любым вопросам до и во время акции</p>
+          </div>
+          <div class="question-block">
+            <h3 class="question-block__number">5</h3>
+            <h4 class="question-block__title">перевод средств</h4>
+            <p class="question-block__text">После акции переведите собранные пожертвования в Ночлежку через сайт или по безналичному расчету</p>
+          </div>
+          <button type="button" class="form-button">заполнить форму</button>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="footer__container">
+          <img class="footer__image" src="./images/footer_illustration.svg" alt="Ночлежка" />
+          <div class="footer__organizer">
+            <h3 class="footer__title">организатор:</h3>
+            <ul class="footer__links">
+              <li>
+                <a class="footer__link" href="#">Ночлежка</a>
+              </li>
+              <li>
+                <a class="footer__email" href="#">info@hedonismfest.ru</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__partners">
+            <h3 class="footer__title">сделано с любовью:</h3>
+            <ul class="footer__links">
+              <li>
+                <a class="footer__link" href="#">Fastsol Digital</a>
+              </li>
+              <li>
+                <a class="footer__link" href="#">shishki.collective</a>
+              </li>
+              <li>
+                <a class="footer__link" href="#">студентами Яндекс.Практикума</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__social">
+            <h3 class="footer__title">мы в соцсетях:</h3>
+            <ul class="footer__icons">
+              <li class="footer__icon">
+                <a href="">
+                  <img src="./images/footer_facebook-icon.svg" alt="facebook" />
+                </a>
+              </li>
+              <li class="footer__icon">
+                <a href="">
+                  <img src="./images/footer_instagram-icon.svg" alt="instagram" />
+                </a>
+              </li>
+              <li class="footer__icon">
+                <a href="">
+                  <img src="./images/footer_vk-icon.svg" alt="vkontakte" />
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="question-block">
-          <h3 class="question-block__number" >2</h3>
-          <h4 class="question-block__title">фото и описание</h4>
-          <p class="question-block__text" >Подготовьте описание и фото вашего заведения. Это нужно для создания карточки в нашем каталоге событий </p>
-        </div>
-        <div class="question-block">
-          <h3 class="question-block__number" >3</h3>
-          <h4 class="question-block__title" >ссылки и соцсети</h4>
-          <p class="question-block__text">Опубликуйте ссылку на вашу карточку в соцсетях, расскажите у себя на сайте, чтобы больше людей узнали о вашем участии</p>
-        </div>
-        <div class="question-block">
-          <h3 class="question-block__number">4</h3>
-          <h4 class="question-block__title">координатор</h4>
-          <p class="question-block__text">Далее с вами свяжется координатор акции, который будет помогать по любым вопросам до и во время акции</p>
-        </div>
-        <div class="question-block">
-          <h3 class="question-block__number">5</h3>
-          <h4 class="question-block__title">перевод средств</h4>
-          <p class="question-block__text">После акции переведите собранные пожертвования в Ночлежку через сайт или по безналичному расчету</p>
-        </div>
-        <button type="button" class="form-button">заполнить форму</button>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="footer__container">
-        <img class="footer__image" src="./images/footer_illustration.svg" alt="Ночлежка">
-        <div class="footer__organizer">
-          <h3 class="footer__title">организатор:</h3>
-          <ul class="footer__links">
-            <li>
-              <a class="footer__link" href="#">Ночлежка</a>
-            </li>
-            <li>
-              <a class="footer__email" href="#">info@hedonismfest.ru</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer__partners">
-          <h3 class="footer__title">сделано с любовью:</h3>
-          <ul class="footer__links">
-            <li>
-              <a class="footer__link" href="#">Fastsol Digital</a>
-            </li>
-            <li>
-              <a class="footer__link" href="#">shishki.collective</a>
-            </li>
-            <li>
-              <a class="footer__link" href="#">студентами Яндекс.Практикума</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer__social">
-          <h3 class="footer__title">мы в соцсетях:</h3>
-          <ul class="footer__icons">
-            <li class="footer__icon" >
-              <a href="" >
-                <img src="./images/footer_facebook-icon.svg" alt="facebook">
-              </a>
-            </li>
-            <li class="footer__icon" >
-              <a href="">
-                <img src="./images/footer_instagram-icon.svg" alt="instagram">
-              </a>
-            </li>
-            <li class="footer__icon">
-              <a  href="">
-                <img src="./images/footer_vk-icon.svg" alt="vkontakte">
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </footer>
-  </div>
-  <script src="./pages/index.js"></script>
-</body>
-
+      </footer>
+    </div>
+    <script src="./scripts/script.js"></script>
+  </body>
 </html>
