--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -44,7 +44,7 @@
 
       <main class="content">
         <h1 class="form__title">стать участником</h1>
-        <div class="form__container_place_cafe">
+        <div class="form__container">
           <p class="form__step">шаг 2 из 4</p>
           <div class="form__instruction">
             <p class="form__heading">заполните форму</p>
