--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -115,13 +115,18 @@
                   rows="6"
                 ></textarea>
               </div>
-            </fieldset>
 
-            <div class="form__controls">
-              <button type="button" class="form-input form-input__control">назад</button>
-              <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
-            </div>
+
+
+            </fieldset>
+<!--перенести снопки вниз, убрать абсолют у кнопок, убрать высоту 100% у form__container_place_cafe-->
+
           </form>
+          
+        </div>
+        <div class="form__controls">
+          <button type="button" class="form-input form-input__control">назад</button>
+          <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
         </div>
       </main>
       <footer class="footer">
