--- a/pages/cafeForm.html
+++ b/pages/cafeForm.html
@@ -121,8 +121,8 @@
           
         </div>
         <div class="form__controls">
-          <button type="button" class="form-input form-input__control">назад</button>
-          <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
+          <button type="button" name="category__form" class="form__button_type_back   form-input form-input__control">назад</button>
+          <button type="submit" name="category__form" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
         </div>
       </main>
       <footer class="footer">
