--- a/pages/partyForm_step3.html
+++ b/pages/partyForm_step3.html
@@ -122,8 +122,8 @@
           </form>
         </div>
         <div class="form__controls">
-          <button type="button" class="form-input form-input__control">назад</button>
-          <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
+          <button type="button" class="form__button_type_back   form-input form-input__control">назад</button>
+          <button type="submit" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
         </div>
       </main>
       <footer class="footer">
