--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="container">
   <div class="page">
     <header class="header">
-      <!-- <div class="header__container"> -->
+      <div class="header__container">
         <div class="header__bar-left">
           <div class="header__logo"></div>
           <button type="button" class="button button_type_link button_place_header">
@@ -26,7 +26,7 @@
               <button type="button" class="button button_type_link">куда пойти</button>
             </li>
             <li class="header__list-item">
-              <button type="button" class="button button_type_link">стать участником</button>
+              <button type="button" onclick="location.href='./pages/category.html'" class="button button_type_link">стать участником</button>
             </li>
             <li class="header__list-item">
               <button type="button" class="button button_type_link">о фестивале</button>
@@ -40,7 +40,7 @@
           <button type="button" class="button button_type_filled button_place_header">поддержать</button>
           <button type="button" class="button button_type_burger"></button>
         </div>
-      <!-- </div> -->
+      </div>
     </header>
     <main class="content">
       <section class="how-to-participate">
