hotfix buttons and add container header

--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -10,7 +10,7 @@
   <body class="container">
     <div class="page">
       <header class="header">
-        <!-- <div class="header__container"> -->
+        <div class="header__container">
           <div class="header__bar-left">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
@@ -38,14 +38,14 @@
             <button type="button" class="button button_type_filled button_place_header">поддержать</button>
             <button type="button" class="button button_type_burger"></button>
           </div>
-        <!-- </div> -->
+        </div>
   
   
       </header>
 
       <main class="content">
         <h1 class="form__title">стать участником</h1>
-        <div class="form__container_place_cafe">
+        <div class="form__container">
           <p class="form__step">шаг 2 из 4</p>
           <div class="form__instruction">
             <p class="form__heading">заполните форму</p>
