--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -12,41 +12,41 @@
 <body class="container">
   <div class="page">
     <header class="header">
-      <!-- <div class="header__container"> -->
-      <div class="header__bar-left">
-        <div class="header__logo"></div>
-        <button type="button" class="button button_type_link button_place_header">
-          <img src="../images/icon_location.svg" alt="location icon" class="button__icon" />
-          Санкт-Петербург
-        </button>
+      <div class="header__container">
+        <div class="header__bar-left">
+          <div class="header__logo"></div>
+          <button type="button" class="button button_type_link button_place_header">
+            <img src="../images/icon_location.svg" alt="location icon" class="button__icon" />
+            Санкт-Петербург
+          </button>
+        </div>
+        <nav class="header__nav-bar">
+          <ul class="header__link-list">
+            <li class="header__list-item">
+              <button type="button" class="button button_type_link">куда пойти</button>
+            </li>
+            <li class="header__list-item">
+              <button type="button" class="button button_type_link">стать участником</button>
+            </li>
+            <li class="header__list-item">
+              <button type="button" class="button button_type_link">о фестивале</button>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__user-actions">
+          <button type="button" class="button button_type_link">
+            <img src="../images/icon_heart.svg" alt="heart icon" class="button__icon" />
+            хочу пойти
+          </button>
+          <button type="button" class="button button_type_filled button_place_header">поддержать</button>
+          <button type="button" class="button button_type_burger"></button>
+        </div>
       </div>
-      <nav class="header__nav-bar">
-        <ul class="header__link-list">
-          <li class="header__list-item">
-            <button type="button" class="button button_type_link">куда пойти</button>
-          </li>
-          <li class="header__list-item">
-            <button type="button" class="button button_type_link">стать участником</button>
-          </li>
-          <li class="header__list-item">
-            <button type="button" class="button button_type_link">о фестивале</button>
-          </li>
-        </ul>
-      </nav>
-      <div class="header__user-actions">
-        <button type="button" class="button button_type_link">
-          <img src="../images/icon_heart.svg" alt="heart icon" class="button__icon" />
-          хочу пойти
-        </button>
-        <button type="button" class="button button_type_filled button_place_header">поддержать</button>
-        <button type="button" class="button button_type_burger"></button>
-      </div>
-      <!-- </div> -->
     </header>
 
     <main class="content">
       <h1 class="form__title">стать участником</h1>
-      <div class="form__container_place_cafe">
+      <div class="form__container">
         <p class="form__step">шаг 2 из 4</p>
         <div class="form__instruction">
           <p class="form__heading">укажите контакты и часы работы</p>
@@ -100,12 +100,11 @@
                 cols="30" rows="3"></textarea>
             </div>
           </fieldset>
-
-          <div class="form__controls">
-            <button type="button" class="form-input form-input__control">назад</button>
-            <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
-          </div>
         </form>
+      </div>
+      <div class="form__controls">
+        <button type="button" class="form-input form-input__control">назад</button>
+        <button type="submit" class="form-input form-input__control form-input__control_active">далее</button>
       </div>
     </main>
     <footer class="footer">
