--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -10,33 +10,35 @@
   <body class="container">
     <div class="page">
       <header class="header">
-        <div class="header__bar-left">
-          <div class="header__logo"></div>
-          <button type="button" class="button button_type_link button_place_header">
-            <img src="../images/icon_location.svg" alt="location icon" class="button__icon" />
-            Санкт-Петербург
-          </button>
-        </div>
-        <nav class="header__nav-bar">
-          <ul class="header__link-list">
-            <li class="header__list-item">
-              <button type="button" class="button button_type_link">куда пойти</button>
-            </li>
-            <li class="header__list-item">
-              <button type="button" class="button button_type_link">стать участником</button>
-            </li>
-            <li class="header__list-item">
-              <button type="button" class="button button_type_link">о фестивале</button>
-            </li>
-          </ul>
-        </nav>
-        <div class="header__user-actions">
-          <button type="button" class="button button_type_link">
-            <img src="../images/icon_heart.svg" alt="heart icon" class="button__icon" />
-            хочу пойти
-          </button>
-          <button type="button" class="button button_type_filled button_place_header">поддержать</button>
-          <button type="button" class="button button_type_burger"></button>
+        <div class="header__container">
+          <div class="header__bar-left">
+            <div class="header__logo"></div>
+            <button type="button" class="button button_type_link button_place_header">
+              <img src="../images/icon_location.svg" alt="location icon" class="button__icon" />
+              Санкт-Петербург
+            </button>
+          </div>
+          <nav class="header__nav-bar">
+            <ul class="header__link-list">
+              <li class="header__list-item">
+                <button type="button" class="button button_type_link">куда пойти</button>
+              </li>
+              <li class="header__list-item">
+                <button type="button" class="button button_type_link">стать участником</button>
+              </li>
+              <li class="header__list-item">
+                <button type="button" class="button button_type_link">о фестивале</button>
+              </li>
+            </ul>
+          </nav>
+          <div class="header__user-actions">
+            <button type="button" class="button button_type_link">
+              <img src="../images/icon_heart.svg" alt="heart icon" class="button__icon" />
+              хочу пойти
+            </button>
+            <button type="button" class="button button_type_filled button_place_header">поддержать</button>
+            <button type="button" class="button button_type_burger"></button>
+          </div>
         </div>
       </header>
 
