--- a/index.html
+++ b/index.html
@@ -8,41 +8,41 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
 
-<body class="container">
-  <div class="page">
-    <header class="header">
-      <div class="header__container">
-        <div class="header__bar-left">
-          <div class="header__logo"></div>
-          <button type="button" class="button button_type_link button_place_header">
-            <img src="./images/icon_location.svg" alt="location icon" class="button__icon" />
-            Санкт-Петербург
-          </button>
+  <body class="container">
+    <div class="page">
+      <header class="header">
+        <div class="header__container">
+          <div class="header__bar-left">
+            <div class="header__logo"></div>
+            <button type="button" class="button button_type_link button_place_header">
+              <img src="./images/icon_location.svg" alt="location icon" class="button__icon" />
+              Санкт-Петербург
+            </button>
+          </div>
+          <nav class="header__nav-bar">
+            <ul class="header__link-list">
+              <li class="header__list-item">
+                <button type="button" class="button button_type_link">куда пойти</button>
+              </li>
+              <li class="header__list-item">
+                <button type="button" onclick="location.href='./pages/category.html'" class="button button_type_link">стать участником</button>
+              </li>
+              <li class="header__list-item">
+                <button type="button" class="button button_type_link">о фестивале</button>
+              </li>
+            </ul>
+          </nav>
+          <div class="header__user-actions">
+            <button type="button" class="button button_type_link">
+              <img src="./images/icon_heart.svg" alt="heart icon" class="button__icon" />
+              хочу пойти
+            </button>
+            <button type="button" class="button button_type_filled button_place_header">поддержать</button>
+            <button type="button" class="button button_type_burger"></button>
+          </div>
         </div>
-        <nav class="header__nav-bar">
-          <ul class="header__link-list">
-            <li class="header__list-item">
-              <button type="button" class="button button_type_link">куда пойти</button>
-            </li>
-            <li class="header__list-item">
-              <button type="button" onclick="location.href='./pages/category.html'" class="button button_type_link">стать участником</button>
-            </li>
-            <li class="header__list-item">
-              <button type="button" class="button button_type_link">о фестивале</button>
-            </li>
-          </ul>
-        </nav>
-        <div class="header__user-actions">
-          <button type="button" class="button button_type_link">
-            <img src="./images/icon_heart.svg" alt="heart icon" class="button__icon" />
-            хочу пойти
-          </button>
-          <button type="button" class="button button_type_filled button_place_header">поддержать</button>
-          <button type="button" class="button button_type_burger"></button>
-        </div>
-      </div>
-    </header>
-      
+      </header>
+
       <main class="content">
         <section class="how-to-participate">
           <h1 class="title">стать участником</h1>
@@ -76,7 +76,7 @@
             <h4 class="question-block__title">перевод средств</h4>
             <p class="question-block__text">После акции переведите собранные пожертвования в Ночлежку через сайт или по безналичному расчету</p>
           </div>
-          <button type="button" class="form-button">заполнить форму</button>
+          <button type="button" class="form-button" onclick="location.href='./pages/category.html';">заполнить форму</button>
         </section>
       </main>
       <footer class="footer">
@@ -130,6 +130,5 @@
         </div>
       </footer>
     </div>
-    <script src="./scripts/script.js"></script>
   </body>
 </html>
