--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -53,25 +53,25 @@
               <p class="form__paragraph">Когда люди будут покупать билеты, вам будут приходить уведомления на электронную почту</p>
             </div>
           </div>
-          <form class="form__form" action="" name="category__form">
+          <form class="form__form" id="master-class" action="master-class_Step3.html" name="category__form">
             <fieldset class="form__input-container">
               <label class="form-input form-input_active">
                 <input class="form-input__radio" type="radio" name="category" value="master-class" />
                 <span>мастер-класс/лекция</span>
-                <img src="../images/form/checked.svg" class="form-input__checked" />
+                <div class="form-input__checker form-input__checker_checked"></div>
               </label>
             </fieldset>
 
             <fieldset class="form__radio-block">
               <label class="form__radio-unit">
-                <img src="../images/form/radio_active.svg" alt="онлайн формат" />
-                <input class="form-input__radio" type="radio" name="lection-form" value="online" />
+                <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
+                <input class="form-input__radio" type="radio" name="master-class-form" value="online" checked />
                 <span>онлайн</span>
               </label>
 
               <label class="form__radio-unit">
-                <img src="../images/form/radio_inactive.svg" alt="оффлайн формат" />
-                <input class="form-input__radio" type="radio" name="lection-form" value="offline" />
+                <div class="form-input__radio-icon"></div>
+                <input class="form-input__radio" type="radio" name="master-class-form" value="offline" />
                 <span>оффлайн</span>
               </label>
             </fieldset>
@@ -127,13 +127,17 @@
                 <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="category" value="+7(" />
               </div>
             </fieldset>
-
-
           </form>
         </div>
         <div class="form__controls">
-          <button type="button" class="form__button_type_back   form-input form-input__control">назад</button>
-          <button type="submit" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
+          <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='./category.html';">
+            назад
+          </button>
+          <button
+            type="submit"
+            form="master-class"
+            class="form__button_type_submit form-input form-input__control form-input__control_active"
+          ></button>
         </div>
       </main>
       <footer class="footer">
@@ -187,5 +191,6 @@
         </div>
       </footer>
     </div>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
