--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -106,7 +106,9 @@
           </form>
         </div>
         <div class="form__controls">
-          <button type="button" class="form__button_type_back   form-input form-input__control">назад</button>
+          <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../pages/master-class.html';">
+            назад
+          </button>
           <button type="submit" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
         </div>
       </main>
