--- a/pages/partyForm.html
+++ b/pages/partyForm.html
@@ -14,7 +14,7 @@
           <div class="header__bar-left">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
-              <img src="../images/icon_location.svg" alt="location icon" class="button__icon">
+              <img src="../images/icon_location.svg" alt="location icon" class="button__icon" />
               Санкт-Петербург
             </button>
           </div>
@@ -33,14 +33,13 @@
           </nav>
           <div class="header__user-actions">
             <button type="button" class="button button_type_link">
-              <img src="../images/icon_heart.svg" alt="heart icon" class="button__icon">
-              хочу пойти</button>
+              <img src="../images/icon_heart.svg" alt="heart icon" class="button__icon" />
+              хочу пойти
+            </button>
             <button type="button" class="button button_type_filled button_place_header">поддержать</button>
             <button type="button" class="button button_type_burger"></button>
           </div>
         </div>
-  
-  
       </header>
 
       <main class="content">
@@ -55,7 +54,7 @@
               <p class="form__paragraph">Установите пожертвование, например кусочек пирога за любую комфортную сумму</p>
             </div>
           </div>
-          <form class="form__form" action="" name="category__form"> 
+          <form class="form__form" id="party" action="partyForm_step3.html" name="category__form">
             <fieldset class="form__input-container form__container_line_bottom">
               <label class="form-input form-input_active">
                 <input class="form-input__radio" type="radio" name="category" value="master-class" />
@@ -67,48 +66,71 @@
             <fieldset class="form__input-container">
               <label class="form__label">город</label>
               <select class="form__field form__city-list">
-                <option value="" style="display:none">Выберите из списка</option>
+                <option value="" style="display: none">Выберите из списка</option>
                 <option>Москва</option>
                 <option>Санкт-Петербург</option>
               </select>
               <label class="form__label" for="cafeName">название мероприятия</label>
-              <input class="form__field formCafe__input_type_text" id="cafeName" type="text" name="partyForm" placeholder="введите название" value="" />
+              <input
+                class="form__field formCafe__input_type_text"
+                id="cafeName"
+                type="text"
+                name="partyForm"
+                placeholder="введите название"
+                value=""
+              />
             </fieldset>
             <fieldset class="form__radio-block form__radio-block_container">
               <label class="form__radio-unit">
-                <img src="../images/form/radio_active.svg" alt="онлайн формат" />
-                <input class="form-input__radio" type="radio" name="lection-form" value="online" />
+                <div class="form-input__radio-icon form-input__radio-icon_checked"></div>
+                <input class="form-input__radio" type="radio" name="party-form" value="online" />
                 <span>открытое мероприятие</span>
               </label>
               <p class="form__radio-subtitle">адрес отобразим в карточке события</p>
+
               <label class="form__radio-unit">
-                <img src="../images/form/radio_inactive.svg" alt="оффлайн формат" />
-                <input class="form-input__radio" type="radio" name="lection-form" value="offline" />
+                <div class="form-input__radio-icon"></div>
+                <input class="form-input__radio" type="radio" name="party-form" value="offline" />
                 <span>закрытое мероприятие</span>
               </label>
               <p class="form__radio-subtitle">адрес увидят только, те кому вы оправите ссылку на событие</p>
             </fieldset>
-            
+
             <fieldset class="form__input-container">
               <label class="form__label" for="cafeName">дата проведения</label>
-              <input class="form__field formCafe__input_type_text" id="cafeName" type="text" name="partyForm" placeholder="укажите дату в формате дд.мм.гггг" value="" />
+              <input
+                class="form__field formCafe__input_type_text"
+                id="cafeName"
+                type="text"
+                name="partyForm"
+                placeholder="укажите дату в формате дд.мм.гггг"
+                value=""
+              />
               <label class="form__label" for="contact-name">контактное лицо</label>
-              <input class="form__field formCafe__input_type_text" id="contact-name" type="text" name="partyForm" placeholder="введите ФИО" value="" />
+              <input
+                class="form__field formCafe__input_type_text"
+                id="contact-name"
+                type="text"
+                name="partyForm"
+                placeholder="введите ФИО"
+                value=""
+              />
               <label class="form__label" for="contact-number">телефон для связи с организатором</label>
-              <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="partyForm" value="+7(" />    
+              <input class="form__field formCafe__input_type_number" id="contact-number" type="tel" name="partyForm" value="+7(" />
             </fieldset>
           </form>
         </div>
         <div class="form__controls">
-          <button type="button" class="form__button_type_back   form-input form-input__control">назад</button>
-          <button type="submit" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
+          <button type="button" class="form__button_type_back form-input form-input__control" onclick="location.href='../pages/category.html';">
+            назад
+          </button>
+          <button type="submit" form="party" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
         </div>
       </main>
 
-
       <footer class="footer">
         <div class="footer__container">
-          <img class="footer__image" src="../images/footer_illustration.svg" alt="Ночлежка">
+          <img class="footer__image" src="../images/footer_illustration.svg" alt="Ночлежка" />
           <div class="footer__organizer">
             <h3 class="footer__title">организатор:</h3>
             <ul class="footer__links">
@@ -137,19 +159,19 @@
           <div class="footer__social">
             <h3 class="footer__title">мы в соцсетях:</h3>
             <ul class="footer__icons">
-              <li class="footer__icon" >
-                <a href="#" >
-                  <img src="../images/footer_facebook-icon.svg" alt="facebook">
-                </a>
-              </li>
-              <li class="footer__icon" >
+              <li class="footer__icon">
                 <a href="#">
-                  <img src="../images/footer_instagram-icon.svg" alt="instagram">
+                  <img src="../images/footer_facebook-icon.svg" alt="facebook" />
                 </a>
               </li>
               <li class="footer__icon">
-                <a  href="#">
-                  <img src="../images/footer_vk-icon.svg" alt="vkontakte">
+                <a href="#">
+                  <img src="../images/footer_instagram-icon.svg" alt="instagram" />
+                </a>
+              </li>
+              <li class="footer__icon">
+                <a href="#">
+                  <img src="../images/footer_vk-icon.svg" alt="vkontakte" />
                 </a>
               </li>
             </ul>
@@ -157,5 +179,6 @@
         </div>
       </footer>
     </div>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
