--- a/pages/cafe-contacts.html
+++ b/pages/cafe-contacts.html
@@ -122,7 +122,11 @@
         </div>
         <div class="form__controls">
           <button type="button" class="form-input form-input__control" onclick="location.href='../pages/cafeForm.html';">назад</button>
-          <button type="submit" form="cafeContacts" class="form-input form-input__control form-input__control_active">далее</button>
+          <button
+            type="submit"
+            form="cafeContacts"
+            class="form__button_type_submit form-input form-input__control form-input__control_active"
+          ></button>
         </div>
       </main>
       <footer class="footer">
