--- a/pages/other.html
+++ b/pages/other.html
@@ -118,7 +118,7 @@
         </div>
         <div class="form__controls">
           <button type="button" class="form-input form-input__control" onclick="location.href='../pages/category.html';">назад</button>
-          <button type="submit" form="other" class="form-input form-input__control form-input__control_active">далее</button>
+          <button type="submit" form="other" class="form__button_type_submit form-input form-input__control form-input__control_active"></button>
         </div>
       </main>
       <footer class="footer">
